# CRUD-rustc

./: Cargo.toml  Readme.md  leiame.md
src/: lib.rs  main.rs  models.rs  state.rs
src/handlers/: create.rs  delete.rs  read.rs  update.rs
tests/: handlers.rs
