[package]
name = "crud_henriquecapi"
version = "0.1.0"
edition = "2024"
description = "CRUD em Rust utilizando o framework web Tide"
licence = "MIT"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide = "0.16.0"

[dev-dependencies]
tide-testing = "0.1.3"

[[test]]
name = "handlers"
path = "tests/handlers.rs"
